Add proper name

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
   <div id="app"></div>
   <script>
+    const name = "<img width='15' src='https://www.harvard.edu/sites/all/themes/hedu2015/assets/img/favicon.ico?v=2018' alt='Harvard Logo'/> Harvard Courses <br /> Ivo Valchev";
     window.$docsify = {
-      name: '',
-      repo: ''
+      name: name,
+
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
