--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app"></div>
   <script>
-    const name = "<img width='15' src='https://www.harvard.edu/sites/all/themes/hedu2015/assets/img/favicon.ico?v=2018' alt='Harvard Logo'/> Harvard Courses <br /> Ivo Valchev";
+    const name = "<img width='15' src='https://www.harvard.edu/sites/all/themes/hedu2015/assets/img/favicon.ico?v=2018' alt='Harvard Logo'/> Harvard University <br /> Ivo Valchev";
     window.$docsify = {
       name: name,
       maxLevel: 4,
