--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     window.$docsify = {
       name: name,
       maxLevel: 4,
+      auto2top: true,
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
