--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Follow my progress as I battle Data Science with Harvar's online certification program">
   <meta name="author" content="Ivo Valchev">
-  <meta property="og:image" name="image" content="harvard.ivovalchev.com/ogimage.png" />
+  <meta property="og:image" name="image" content="https://harvard.ivovalchev.com/ogimage.png" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
   <link rel="shortcut icon" type="image/png" href="https://www.harvard.edu/sites/all/themes/hedu2015/assets/img/favicon.ico?v=2018"/>
