--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Data Science Harvard - Ivo Valchev</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Follow my progress as I battle Data Science with Harvar's online certification program">
+  <meta name="description" content="Follow my progress as I battle Data Science with Harvard's online certification program">
   <meta name="author" content="Ivo Valchev">
   <meta property="og:image" name="image" content="https://harvard.ivovalchev.com/ogimage.png" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
